@@ -1,3 +1,17 @@
+2007-12-17  Kenneth Zadeck <zadeck@naturalbridge.com>
+
+	* lto-function-out.c (output_block.unexpanded_local_decls_index): New vector.
+	(destroy_output_block): Added missing ifdef.
+	(output_decl_index): Added this_index to return added index.
+	(output_type_ref): Added parameter to output_decl_index.
+	(output_local_decl_ref): Added write parameter and code to initialize 
+	unexpanded_local_decls_index.
+	(output_expr_operand): Added extra operands to output_decl_index and
+	output_local_decl_ref.
+	(output_local_var): New function split out from output_local_vars.
+	(output_local_vars): Added code to string unexpanded_var_list separately.
+	(output_function): Added code to output decl_context for function.
+
 2007-12-13  Nathan Froyd  <froydnj@codesourcery.com>
 
 	* dwarf2out.c (mark_die_used): New function.
